# aulas/aula10/swagger.yaml
@@ -34,6 +34,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ArrayOfProdutos'
+      security:
+        - JWTAuth: []
   /produtos/{id}:
     get:
       tags:
@@ -113,6 +115,11 @@ paths:
                 $ref: '#/components/schema/Mensagem'
 
 components:
+  securitySchemes:
+    JWTAuth:
+      type: apiKey
+      in: header
+      name: Authorization
   schemas:
     ArrayOfProdutos:
       type: array
